--- a/routes-to-phone/package.json
+++ b/routes-to-phone/package.json
@@ -25,6 +25,7 @@
     "core-js": "^2.4.1",
     "file-saver": "^1.3.8",
     "ng2-file-upload": "^1.3.0",
+    "ngx-popover": "0.0.16",
     "rxjs": "^5.5.6",
     "socket.io": "^2.0.4",
     "zone.js": "^0.8.19"
